<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>agentdemo</artifactId>
        <groupId>com.example</groupId>
        <version>1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>springAgentInject</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.7.14</version>
            <scope>provided</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.example</groupId>-->
<!--            <artifactId>popertiesLauncher</artifactId>-->
<!--            <version>0.0.1-SNAPSHOT</version>-->
<!--&lt;!&ndash;            <scope>compile</scope>&ndash;&gt;-->
<!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createSourcesJar>true</createSourcesJar>
                            <shadeSourcesContent>true</shadeSourcesContent>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <!--                            <relocations>-->
                            <!--                                <relocation>-->
                            <!--                                    <pattern>co.elastic.apm.agent.common</pattern>-->
                            <!--                                    <shadedPattern>co.elastic.apm.agent.premain.common</shadedPattern>-->
                            <!--                                </relocation>-->
                            <!--                                <relocation>-->
                            <!--                                    <pattern>co.elastic.apm.agent.configuration</pattern>-->
                            <!--                                    <shadedPattern>co.elastic.apm.agent.premain.configuration</shadedPattern>-->
                            <!--                                </relocation>-->
                            <!--                            </relocations>-->
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Premain-Class>com.example.agentdemo.MyAgent</Premain-Class>
                                        <Agent-Class>com.example.agentdemo.MyAgent</Agent-Class>
                                        <!--                                        <SCM-Revision>${git.commit.id.abbrev}</SCM-Revision>-->
                                        <Can-Redefine-Classes>true</Can-Redefine-Classes>
                                        <Can-Retransform-Classes>true</Can-Retransform-Classes>
                                        <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <version>3.1.1</version>-->
            <!--                <configuration>-->
            <!--                    <descriptorRefs>-->
            <!--                        &lt;!&ndash;将应用的所有依赖包都打到jar包中。如果依赖的是 jar 包，jar 包会被解压开，平铺到最终的 uber-jar 里去。输出格式为 jar&ndash;&gt;-->
            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
            <!--                    </descriptorRefs>-->
            <!--                    <archive>-->
            <!--                        <manifestEntries>-->
            <!--                            // 指定premain()的所在方法-->
            <!--                            <Agent-CLass>com.example.agentdemo.MyAgent</Agent-CLass>-->
            <!--                            <Premain-Class>com.example.agentdemo.MyAgent</Premain-Class>-->
            <!--                            <Can-Redefine-Classes>true</Can-Redefine-Classes>-->
            <!--                            <Can-Retransform-Classes>true</Can-Retransform-Classes>-->
            <!--                        </manifestEntries>-->
            <!--                    </archive>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
        </plugins>
    </build>
</project>